--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     We have delivered 250,000+ meals last year!
                 </p>
                 <a href="#" class="btn">Start eating well</a>
-                <a href="#" class="btn">Learn more &rarr;</a>
+                <a href="#" class="btn">Learn more &darr;</a>
             </div>
             <div class="hero-image-box">
                 <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, meals in storage container, and food bowls on a table" /> 
