How it works section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </nav>
     </header>
     <main>
+
         <section class="section-hero">
             <div class="hero">
                 <div class="hero-text-box">
@@ -51,6 +52,12 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-how">
+            <div>Test 1</div>    
+        </section>
+    
     </main>
+
 </body>
 </html>
