--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
             </div>
         </section>
 
-        <section class="section-how">
+        <section class="section-how grid grid--2-col">
+            <div>Test 1</div>    
             <div>Test 1</div>    
         </section>
     
