finished reusable grid

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
             </div>
         </section>
 
-        <section class="section-how grid grid--2-col">
-            <div>Test 1</div>    
-            <div>Test 1</div>    
+        <section class="section-how">
+            <div class="container grid grid--2-col">
+                <div>Test 1</div>    
+                <div>Test 1</div>    
+            </div>
         </section>
     
     </main>
