--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <main>
 
         <section class="section-hero">
+
             <div class="hero">
                 <div class="hero-text-box">
                     <h1 class="heading-primary">A healthy meal delivered to your door, every single day</h1>
@@ -51,12 +52,29 @@
                     <img src="img/hero.png" class="hero-img" alt="Woman enjoying food, meals in storage container, and food bowls on a table" /> 
                 </div>
             </div>
+
         </section>
 
         <section class="section-how">
+            <div class="container">
+                <span class="subheading">How it works</span>
+                <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
+            </div>
             <div class="container grid grid--2-col">
-                <div>Test 1</div>    
-                <div>Test 1</div>    
+                <div class="step-text-box">
+                    <p class="step-number">01</p>  
+                    <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
+                    <p class="step-description">
+                        Never again waste time thinking about what
+                        to eat! Omnifood AI will create a 100%
+                        personalized weekly meal plan just for you.
+                        It makes sure you get all the nutrients and
+                        vitamins you need, no matter what diet you follow!
+                    </p>
+                </div>
+                <div class="step-img-box">
+                    <img src="img/app/app-screen-1.png" class="step-img" alt="iPhone app preferences selection screen" />
+                </div>
             </div>
         </section>
     
