--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span class="subheading">How it works</span>
                 <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
             </div>
-            <div class="container grid grid--2-col">
+            <div class="container grid grid--2-col grid--center-v">
                 <div class="step-text-box">
                     <p class="step-number">01</p>  
                     <h3 class="heading-tertiary">Tell us what you like (and what not)</h3>
