--- a/index.html
+++ b/index.html
@@ -117,6 +117,27 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-meals">
+            <div class="container">
+                <span class="subheading">Sample Meals</span>
+                <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
+            </div>
+            <div class="container grid grid--3-col">
+                <div class="meal">
+                    <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas" />  
+                    <span class="tag">Vegeterian</span>
+                    <p class="meal-title">Japanese Gyozas</p>
+                    <ul class="meal-attributes">
+                        <li class="meal-attribute">650 calories</li>
+                        <li class="meal-attribute">NutriScore &reg; 74</li>
+                        <li class="meal-attribute">4.9 rating (537)</li>
+                    </ul>
+                </div>
+                <div class="meal">Meal</div>
+                <div class="List">List of diets</div>
+            </div>
+        </section>
     
     </main>
 
