--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         </section>
 
         <section class="section-meals">
-            <div class="container">
+            <div class="container center-text">
                 <span class="subheading">Sample Meals</span>
                 <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
             </div>
-            <div class="container grid grid--3-col">
+            <div class="container grid grid--3-col margin-bottom-md">
                 <div class="meal">
                     <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas" />  
                     <div class="meal-content">
