structure testimonial section

--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@
                 <a href="#" class="link">See all recipes &rarr;</a>
             </div>
         </section>
+
+        <section class="section-testimonials grid grid--2-col">
+            <div class="testimonials"></div>
+            <div class="gallery">gallery</div>
+        </section>
     
     </main>
 
