--- a/index.html
+++ b/index.html
@@ -301,6 +301,20 @@
                 </figure>
             </div>
         </section>
+
+        <section class="section-pricing">
+            <div class="container">
+                <span class="subheading">Pricing</span>
+                <h2 class="heading-secondary">Eating well without breaking the bank</h2>
+            </div>
+            <div class="container grid grid--2-col">
+                <div class="pricing-plan">
+                    <p class="plan-name">Starter</p>
+                    <p class="plan-price">$399</p>
+                </div>
+                <div class="pricing-plan"></div>
+            </div>
+        </section>
     
     </main>
 
