--- a/index.html
+++ b/index.html
@@ -321,11 +321,14 @@
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                            <span>Order times are between 11am and 9pm</span>
+                            <span>Order from 11am to 9pm</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
                             <span>Delivery is free</span>
+                        </li>
+                        <li class="list-item">
+                            <ion-icon class="list-icon" name="close-outline"></ion-icon>
                         </li>
                     </ul>
                     <div class="plan-sing-up">
@@ -333,7 +336,7 @@
                     </div>
                 </div>
 
-                <div class="pricing-plan">
+                <div class="pricing-plan pricing-plan--complete">
                     <header class="plan-header">
                         <p class="plan-name">Complete</p>
                         <p class="plan-price"><span>$</span>649</p>
@@ -342,11 +345,11 @@
                     <ul class="list">
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                            <span>2 meals per day</span>
+                            <span><strong>2 meals</strong> per day</span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                            <span>Order 24/7</span>
+                            <span>Order <strong>24/7</strong></span>
                         </li>
                         <li class="list-item">
                             <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -362,6 +365,7 @@
                     </div>
                 </div>
             </div>
+            <div class="container grid"></div>
         </section>
     
     </main>
