--- a/index.html
+++ b/index.html
@@ -365,7 +365,12 @@
                     </div>
                 </div>
             </div>
-            <div class="container grid"></div>
+            <div class="container grid grid--4-cols">
+                <div class="feature"></div>
+                <div class="feature"></div>
+                <div class="feature"></div>
+                <div class="feature"></div>
+            </div>
         </section>
     
     </main>
