feature part content

--- a/index.html
+++ b/index.html
@@ -365,11 +365,39 @@
                     </div>
                 </div>
             </div>
-            <div class="container grid grid--4-cols">
-                <div class="feature"></div>
-                <div class="feature"></div>
-                <div class="feature"></div>
-                <div class="feature"></div>
+            <div class="container grid grid--4-col">
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">Never cook again</p>
+                    <p class="feature-text">
+                        Our subscriptions cover 365 days per year,
+                        even including major holidays.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">Never cook again</p>
+                    <p class="feature-text">
+                        Our subscriptions cover 365 days per year,
+                        even including major holidays.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">Never cook again</p>
+                    <p class="feature-text">
+                        Our subscriptions cover 365 days per year,
+                        even including major holidays.
+                    </p>
+                </div>
+                <div class="feature">
+                    <ion-icon class="feature-icon" name="infinite-outline"></ion-icon>
+                    <p class="feature-title">Never cook again</p>
+                    <p class="feature-text">
+                        Our subscriptions cover 365 days per year,
+                        even including major holidays.
+                    </p>
+                </div>
             </div>
         </section>
     
