--- a/index.html
+++ b/index.html
@@ -405,6 +405,13 @@
                 </div>
             </div>
         </section>
+
+        <section class="section-cta">
+            <div class="container">
+                <div class="cta-text-box">CTA</div>
+                <div class="cta-img-box">Image</div>
+            </div>
+        </section>
     
     </main>
 
