--- a/index.html
+++ b/index.html
@@ -408,8 +408,10 @@
 
         <section class="section-cta">
             <div class="container">
-                <div class="cta-text-box">CTA</div>
-                <div class="cta-img-box">Image</div>
+                <div class="cta">
+                    <div class="cta-text-box">CTA</div>
+                    <div class="cta-img-box" role="img" aria-label="Women enjoying food"></div>
+                </div>
             </div>
         </section>
     
