--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/queries.css">
     <title>Omnifood</title>
 </head>
 <body>
@@ -15,11 +16,11 @@
         <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
         <nav class="main-nav">
             <ul class="main-nav-list">
-                <li><a class="main-nav-link" href="#">Section 1</a></li>
-                <li><a class="main-nav-link" href="#">Section 2</a></li>
-                <li><a class="main-nav-link" href="#">Section 3</a></li>
-                <li><a class="main-nav-link" href="#">Section 4</a></li>
-                <li><a class="main-nav-link nav-cta" href="#">Section 5</a></li>
+                <li><a class="main-nav-link" href="#">How it works</a></li>
+                <li><a class="main-nav-link" href="#">Meals</a></li>
+                <li><a class="main-nav-link" href="#">Testimonials</a></li>
+                <li><a class="main-nav-link" href="#">Pricing</a></li>
+                <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
             </ul>
         </nav>
     </header>
