--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Omnifood</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header nav-open">
         <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo">
         <nav class="main-nav">
             <ul class="main-nav-list">
@@ -23,6 +23,10 @@
                 <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
             </ul>
         </nav>
+        <button class="btn-mobile-nav">
+            <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+            <ion-icon name="close-outline" class="icon-mobile-nav"></ion-icon>
+        </button>
     </header>
     <main>
 
